Made a small addition to site.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> This is Coursera test!</h1>
+<h1> This is Coursera test 2!</h1>
 </body>
 </html>
